updated GC Color message

--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -506,7 +506,7 @@ onClick="loading([], ['results']); run([
  </TR>
  <TR>
   <Td>
-<font class="small">Color GC content? <label><input class="backbox" type="radio" name="show_gc" id="show_gc" tabindex="1" value="1" />Yes</label><label><input class="backbox" type="radio" name="show_gc" id="show_gc" tabindex="1" value="0" checked />No</label></font>
+<font class="small">Color GC content? (green=GC, orange=N) <label><input class="backbox" type="radio" name="show_gc" id="show_gc" tabindex="1" value="1" />Yes</label><label><input class="backbox" type="radio" name="show_gc" id="show_gc" tabindex="1" value="0" checked />No</label></font>
     </DIV>
   </TD>
 
