make default menus closed

--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -163,7 +163,7 @@ onClick="loading([], ['results']); run([
  <TR>
   <TH colspan="3">
    <DIV class="mainDiv">
-   <DIV id = "dr" class="topItem" onMouseOver="Init(this); changeColor('dr','#000099'); " onMouseOut="changeColor('dr','#009900');">Database Retrieval:</DIV>
+   <DIV id = "dr" class="topItem" onMouseOver="Init(this); changeColor('dr','#000099'); " onMouseOut="changeColor('dr','#009900');">CoGe Database Retrieval:</DIV>
    <DIV class="dropMenu">
      <DIV class="subMenu" style="display:inline;">
      <TABLE style="width: 100%;">
@@ -242,7 +242,7 @@ onClick="loading([], ['results']); run([
    <DIV class="mainDiv" >
    <DIV id="isr" class="topItem" onMouseOver="Init(this);changeColor('isr','#000099'); " onMouseOut="changeColor('isr','#009900');" >Internet Sequence Retrieval:</DIV>
    <DIV class="dropMenu">
-     <DIV class="subMenu" style="display:inline;" >
+     <DIV class="subMenu" style="display:none;" >
      <TABLE style="width: 100%;">
       <TR>
       <TD>        
@@ -355,7 +355,7 @@ onClick="loading([], ['results']); run([
   <DIV class="mainDiv">
    <DIV id="ao" class="topItem" onMouseOver="Init(this);changeColor('ao','#000099'); " onMouseOut="changeColor('ao','#009900');" >Algorithm Options:</DIV>
    <DIV class="dropMenu">
-     <DIV class="subMenu" style="display:inline;">
+     <DIV class="subMenu" style="display:none;">
      <TABLE style="width: 100%;">
       <TR>
       <TD>
@@ -463,7 +463,7 @@ onClick="loading([], ['results']); run([
   <DIV class="mainDiv">
    <DIV id="ip" class="topItem" onMouseOver="Init(this);changeColor('ip','#000099'); " onMouseOut="changeColor('ip','#009900');" >Image Parameters:</DIV>
    <DIV class="dropMenu">
-     <DIV class="subMenu" style="display:inline;">
+     <DIV class="subMenu" style="display:none;">
      <TABLE style="width: 100%;">
       <TR>
       <TD>
@@ -558,7 +558,7 @@ onClick="loading([], ['results']); run([
   <DIV class="mainDiv">
    <DIV id="infor" class="topItem" onMouseOver="Init(this);changeColor('infor','#000099'); " onMouseOut="changeColor('infor','#009900');" >Information:</DIV>
    <DIV class="dropMenu">
-     <DIV class="subMenu" style="display:inline;">
+     <DIV class="subMenu" style="display:none;">
      <TABLE style="width: 100%;">
       <TR>
       <TD>
