--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -4,30 +4,36 @@
   <TR>
    <TMPL_LOOP NAME="BUTTON_LOOP">
     <TD align=right valign="top">
-     <DIV id="button<TMPL_VAR NAME=BUTTON_NUM>"><input type=button value ="<TMPL_VAR NAME=BUTTON_NAME>" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq'])"> </DIV>
+     <DIV id="button<TMPL_VAR NAME=BUTTON_NUM>"><input type=button value ="<TMPL_VAR NAME=BUTTON_NAME>" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq']);gen_title(['args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>'],['box_name'])"> </DIV>
     </TD>
    </TMPL_LOOP>
-    <TD align=right valign="top">
-      <input type=button value ="<TMPL_VAR NAME=BUTTON_NAME>"  onClick="<TMPL_VAR NAME="BUTTON_URL">"> 
    </TR>
-<TR>
+   <TR>
+
+
+
 <TABLE>
 <TR>
-<TD align = right valign = "middle">
-<DIV id="extend">
- <input type = hidden id="upstream" value="0">
- <input type = hidden id="downstream" value="0">
- </div>
-</TD>
-<TD align = right valign = "middle">
-<input type=button value ="Reset" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'args__<TMPL_VAR NAME=RESET>', 'args__downstream', 'args__<TMPL_VAR NAME=RESET>'],['seq']);get_extend_box([],['extend'])">
+<TD>
 </TR>
-</TABLE>
+<TR>
+<TD align = left valign = "middle" class="seqbackbox">
+<font class="oblique">Extend Sequence</font>
+</TD>
+</TR>
+<TR> 
+<TD align = left valign = "middle">
+UPSTREAM: <INPUT type="text" id="upstream" style ="background-color: #F5F5DC" value= "0">
+DOWNSTREAM: <INPUT type="text" id="downstream" style ="background-color: #F5F5DC" value= "0">
+</TD>
+<TD align = left valign = "middle">
+<input type=button value ="Reset" id = "reset" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'args__<TMPL_VAR NAME=RESET>', 'args__downstream', 'args__<TMPL_VAR NAME=RESET>'],['seq'])">
+</TR>
 <TR>
 <TD>
-
-<input type= button value ="Add to Sequence" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq'])"> 
+<input type= button value ="Add to Sequence" id = "add_to" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq'])"> 
 </TR>
+</TABLE>
 </TABLE>
 </TMPL_IF>
 
