--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -23,8 +23,8 @@
 </TR>
 <TR> 
 <TD align = left valign = "middle">
-UPSTREAM: <INPUT type="text" id="upstream" style ="background-color: #F5F5DC" value= "0">
-DOWNSTREAM: <INPUT type="text" id="downstream" style ="background-color: #F5F5DC" value= "0">
+<TMPL_VAR NAME = "UPSTREAM"> <INPUT type="text" id="upstream" style ="background-color: #F5F5DC" value= "0">
+<TMPL_VAR NAME="DOWNSTREAM"><INPUT type="text" id="downstream" style ="background-color: #F5F5DC" value= "0">
 </TD>
 <TD align = left valign = "middle">
 <input type=button value ="Reset" id = "reset" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'args__<TMPL_VAR NAME=RESET>', 'args__downstream', 'args__<TMPL_VAR NAME=RESET>'],['seq'])">
