removed textarea select button option

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -25,9 +25,7 @@
   <TD align=right>
    <TABLE>
     <TR>
-     <TD align=right><TMPL_IF NAME="SELECT">
-      <!--<INPUT TYPE="text" VALUE="<TMPL_VAR NAME="TEXTAREA">" NAME="Seq">
-      --><INPUT type = 'button' value='Highlight Text' onClick='this.Seq.focus();this.Seq.select();'></TMPL_IF>
+     <TD align=right>
      </TD>
      <TD align=right><TMPL_IF NAME="CLOSE"><INPUT type = 'button' value= 'Close Window' onClick='window.close()'></TMPL_IF>
      </TD>
