--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -2,40 +2,58 @@
 
 <TABLE>
   <TR>
-   <TMPL_LOOP NAME="BUTTON_LOOP">
-    <TD align=right valign="top">
-     <DIV id="button<TMPL_VAR NAME=BUTTON_NUM>"><input type=button value ="<TMPL_VAR NAME=BUTTON_NAME>" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq']);gen_title(['args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>'],['box_name'])"> </DIV>
-    </TD>
+       <TMPL_IF NAME="FEATURE">
+       <TMPL_LOOP NAME="BUTTON_LOOP">
+     <TD align=right valign="top">
+     <DIV id="button<TMPL_VAR NAME=BUTTON_NUM>"><input type=button value ="<TMPL_VAR NAME=BUTTON_NAME>" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq']);gen_title(['args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>'],['box_name'])"></DIV>
+   </TD>
    </TMPL_LOOP>
+   </TMPL_IF>
+    <TMPL_IF NAME="RANGE">
+    <TMPL_LOOP NAME="BUTTON_LOOP">
+    <TD align=right valign="top">
+     <DIV id="button<TMPL_VAR NAME=BUTTON_NUM>"><input type=button value ="<TMPL_VAR NAME=BUTTON_NAME>" onClick="get_seq(['args__start', 'args__<TMPL_VAR NAME=START>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__stop', 'args__<TMPL_VAR NAME=STOP>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__add', 'args__1'],['seq']);gen_title(['args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>'],['box_name'])"></DIV>
+   </TD>
+   </TMPL_LOOP>
+   </TMPL_IF>
+    </TD>
    </TR>
    <TR>
 
 
 
 <TABLE>
-<TR>
-<TD>
-</TR>
-<TR>
-<TD align = left valign = "middle" class="seqbackbox">
-<font class="oblique">Extend Sequence</font>
-</TD>
-</TR>
-<TR> 
-<TD align = left valign = "middle">
-<TMPL_VAR NAME = "UPSTREAM"> <INPUT type="text" id="upstream" style ="background-color: #F5F5DC" value= "0">
-<TMPL_VAR NAME="DOWNSTREAM"><INPUT type="text" id="downstream" style ="background-color: #F5F5DC" value= "0">
-</TD>
-<TD align = left valign = "middle">
-<input type=button value ="Reset" id = "reset" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'args__<TMPL_VAR NAME=RESET>', 'args__downstream', 'args__<TMPL_VAR NAME=RESET>'],['seq'])">
-</TR>
-<TR>
-<TD>
-<input type= button value ="Add to Sequence" id = "add_to" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq'])"> 
-</TR>
+ <TR>
+  <TD>
+ </TR>
+ <TR>
+  <TD align = left valign = "middle" class="seqbackbox">
+   <font class="oblique"><TMPL_VAR NAME="EXTEND"></font>
+  </TD>
+ </TR>
+ <TR> 
+  <TD align = left valign = "middle">
+   <TMPL_VAR NAME = "UPSTREAM"> <INPUT type="text" id="upstream" style ="background-color: #F5F5DC" value= "<TMPL_VAR NAME="UPVALUE">">
+   <TMPL_VAR NAME="DOWNSTREAM"><INPUT type="text" id="downstream" style ="background-color: #F5F5DC" value= "<TMPL_VAR NAME="DOWNVALUE">">
+  </TD>
+  <TD align = left valign = "middle">
+   <TMPL_IF NAME="FEATURE">
+      <input type=button value ="Reset" id = "reset" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'args__<TMPL_VAR NAME=RESET>', 'args__downstream', 'args__<TMPL_VAR NAME=RESET>'],['seq'])">
+    </TR>
+    <TR>
+     <TD>
+      <input type= button value ="Add to Sequence" id = "add_to" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq'])"> 
+   </TMPL_IF>
+   <TMPL_IF NAME="RANGE">
+    </TR>
+    <TR>
+     <TD>
+      <input type= button value ="Redefine Sequence" id = "add_to" onClick="get_seq(['args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__start', 'upstream', 'args__stop', 'downstream'],['seq'])"> 
+   </TMPL_IF>
+   </TR>
+ </TABLE>
 </TABLE>
-</TABLE>
-</TMPL_IF>
+ </TMPL_IF>
 
 <TMPL_IF NAME=TEXT>
 <TABLE>
