added method for deleting cookie

--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -19,6 +19,10 @@ function place_cookie(valid, cookie, url)
      }
   }
 
+function delete_cookie(cookie)
+  {
+    document.cookie=cookie;
+  }
 </SCRIPT>
 
 <TMPL_IF NAME="LOGIN">
