--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -25,7 +25,7 @@
   <TD align=right>
    <TABLE>
     <TR>
-     <TD align=right>
+     <TD align=right><TMPL_IF NAME="HELP"><a href="./help/<TMPL_VAR NAME=HELP>"><img src="./picts/help-logo.png" border=0></a></TMPL_IF>
      </TD>
      <TD align=right><TMPL_IF NAME="CLOSE"><INPUT type = 'button' value= 'Close Window' onClick='window.close()'></TMPL_IF>
      </TD>
