--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -2,6 +2,13 @@
 
 <script language="javascript">
 
+function launch_seqview(dsid, chr)
+ {
+   start = kaj.GS('start');
+   stop = kaj.GS('stop');
+   window.open("SeqView.pl?dsid="+dsid+"&chr="+chr+"&start="+start+"&stop="+stop);
+ }
+
 function dataset_chain(val) {
  if (val) {kaj.GS('org_list', val);}
  kaj.GS('ds_list','<input type=hidden id = "ds_id"><font class="loading. . ."></font>');
