--- a/web/css/styled.css
+++ b/web/css/styled.css
@@ -19,6 +19,12 @@ BODY {
   color: #000099;
 }
 
+.feattable {
+  height: 300px;
+  overflow: auto;
+  border: 1px;
+}
+
 .prep {
   font-family:fixed, monospace;
   white-space:pre;
