--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -1,3 +1,18 @@
+
+<SCRIPT language="JavaScript">
+
+
+function reset_updown() {
+  kaj.GS('upstream',0);
+  kaj.GS('downstream',0);
+}
+
+function waiting() {
+  kaj.GS('annotation','<font class="loading">Loading. . .</font>');
+}
+
+</SCRIPT>
+
 <TMPL_IF NAME=BOTTOM_BUTTONS>
 
 <TABLE>
@@ -5,27 +20,27 @@
        <TMPL_IF NAME="FEATURE">
        <TMPL_LOOP NAME="BUTTON_LOOP">
      <TD align=right valign="top">
-     <DIV id="button<TMPL_VAR NAME=BUTTON_NUM>"><input type=button value ="<TMPL_VAR NAME=BUTTON_NAME>" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq']);gen_title(['args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>'],['box_name'])"></DIV>
+     <DIV id="button><TMPL_VAR NAME=BUTTON_NUM>"><input type=button value ="<TMPL_VAR NAME=BUTTON_NAME>" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__changestrand', 'args__<TMPL_VAR NAME=CHANGESTRAND>'],['seq']);gen_title(['args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>'],['box_name']);new_foot(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__changestrand', 'args__<TMPL_VAR NAME=CHANGESTRAND>'],['buttons'])"></DIV>
    </TD>
    </TMPL_LOOP>
    </TMPL_IF>
     <TMPL_IF NAME="RANGE">
     <TMPL_LOOP NAME="BUTTON_LOOP">
     <TD align=right valign="top">
-     <DIV id="button<TMPL_VAR NAME=BUTTON_NUM>"><input type=button value ="<TMPL_VAR NAME=BUTTON_NAME>" onClick="get_seq(['args__start', 'args__<TMPL_VAR NAME=START>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__stop', 'args__<TMPL_VAR NAME=STOP>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__add', 'args__1'],['seq']);gen_title(['args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>'],['box_name'])"></DIV>
-   </TD>
+     <DIV id="button><TMPL_VAR NAME=BUTTON_NUM>"><input type=button value ="<TMPL_VAR NAME=BUTTON_NAME>" onClick="get_seq(['args__start', 'args__<TMPL_VAR NAME=START>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__stop', 'args__<TMPL_VAR NAME=STOP>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__add', 'args__1', 'args__changestrand', 'args__<TMPL_VAR NAME=CHANGESTRAND>'],['seq']);gen_title(['args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>'],['box_name']);new_foot(['args__start', 'args__<TMPL_VAR NAME=START>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__stop', 'args__<TMPL_VAR NAME=STOP>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__add', 'args__1', 'args__changestrand', 'args__<TMPL_VAR NAME=CHANGESTRAND>'],['buttons'])"></DIV>
    </TMPL_LOOP>
+   <TD align=right valign="top">
+     <DIV id="annotation_button"> <input type=button value="Find Features in Sequence" onClick="waiting();find_feats(['args__start', 'args__<TMPL_VAR NAME=START>', 'args__stop', 'args__<TMPL_VAR NAME=STOP>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>'],['annotation'])">
+     </DIV>
+   </TD>
    </TMPL_IF>
     </TD>
    </TR>
    <TR>
 
 
-
 <TABLE>
- <TR>
-  <TD>
- </TR>
+ <div id ="annotation"></DIV>
  <TR>
   <TD align = left valign = "middle" class="seqbackbox">
    <font class="oblique"><TMPL_VAR NAME="EXTEND"></font>
@@ -38,17 +53,18 @@
   </TD>
   <TD align = left valign = "middle">
    <TMPL_IF NAME="FEATURE">
-      <input type=button value ="Reset" id = "reset" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'args__<TMPL_VAR NAME=RESET>', 'args__downstream', 'args__<TMPL_VAR NAME=RESET>'],['seq'])">
+<!--      <input type=button value ="Reset" id = "reset" onClick="reset_values(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>'],['seq'])"> -->
+        <input type = button value = "Reset" id="reset" onClick="reset_updown();get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq'])">
     </TR>
     <TR>
      <TD>
-      <input type= button value ="Add to Sequence" id = "add_to" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq'])"> 
+      <input type= button value ="Add to Sequence" id = "add_to" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq']);new_foot(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>','args__upstream', 'upstream', 'args__downstream', 'downstream'],[])"> 
    </TMPL_IF>
    <TMPL_IF NAME="RANGE">
     </TR>
     <TR>
      <TD>
-      <input type= button value ="Redefine Sequence" id = "add_to" onClick="get_seq(['args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__start', 'upstream', 'args__stop', 'downstream'],['seq'])"> 
+      <input type= button value ="Redefine Sequence" id = "add_to" onClick="get_seq(['args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__start', 'upstream', 'args__stop', 'downstream'],['seq']);new_foot(['args__start', 'upstream', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__stop', 'downstream', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__add', 'args__1'],['buttons'])"> 
    </TMPL_IF>
    </TR>
  </TABLE>
@@ -65,4 +81,13 @@
   </TD>
  </TR>
 </TABLE>
+</TMPL_IF>
+
+<TMPL_IF NAME="FEATUREBOX">
+ <TABLE>
+   <TR>
+   <TD align=right valign="top">
+    <TMPL_VAR NAME="LISTFEATURES">
+   </TR>
+ </TABLE>
 </TMPL_IF>
