updated text for upstream.downstream"

--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -187,10 +187,10 @@ onClick="loading([], ['results']); run([
 	<TD colspan =2>
 	<font class="small">Reverse region display: <label><input class="backbox" type="radio" name="rev_region1" id="rev_region1" tabindex="1" value="1" />Yes</label><label><input class="backbox" type="radio" name="rev_region1" id="rev_region1" tabindex="1" value="0" checked />No</label></font>
       <TR>
-       <TD><DIV class="small">Upstream:</DIV>
+       <TD><DIV class="small">Upstream:<br>(left sequence)</DIV>
        <TD><DIV  id="up1" ><input class="backbox" type="text" name="dr1up" id="dr1up" tabindex="1" size="10" value="10000" /> </DIV>
       <TR>
-       <TD><DIV class="small">Downstream:</DIV>
+       <TD><DIV class="small">Downstream:<br>(right sequence)</DIV>
        <TD><DIV  id="down1"><input class="backbox" type="text" name="dr1down" id="dr1down" tabindex="1" size="10"  value="10000" /></DIV>
       <TR>
         <TD><input type="checkbox" name="apply_all" id="apply_all" value="0" /><font class ="small" float>(Apply distance to all?)</font>
