added code to auto-initialize coge accn names if provided

--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -36,6 +36,9 @@ function setup(){
 	   }
 	  }
        }
+  if (kaj.GS('accn1')) {dataset_search(['accn1','args__1'],[feat_search_chain]);}
+  if (kaj.GS('accn2')) {dataset_search(['accn2','args__2'],[feat_search_chain]);}
+  if (kaj.GS('accn3')) {dataset_search(['accn3','args__3'],[feat_search_chain]);}
 }
 
 
