removed duplicate table options

--- a/web/tmpl/box.tmpl
+++ b/web/tmpl/box.tmpl
@@ -1,4 +1,4 @@
-<table width="100%" border="0" cellspacing="0" cellpadding="0" border=0>
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
  <tr> 
   <td width="6"><img src="/CoGe/picts/table/table_bg_head_tl.png" width="6" height="23"></td>
   <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
