added a </div> where missing

--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -27,7 +27,7 @@ function delete_cookie(cookie)
 
 <TMPL_IF NAME="LOGIN">
 <DIV id="message"><TMPL_VAR NAME="MESSAGE"></DIV>
-<DIV class=large>Please log on: <font class="small">(You will need make sure your browser is set to accept <a href="http://en.wikipedia.org/wiki/HTTP_cookie">cookies</a>)</font>
+<DIV class=large>Please log on: <font class="small">(You will need make sure your browser is set to accept <a href="http://en.wikipedia.org/wiki/HTTP_cookie">cookies</a>)</font></div>
 <TABLE class="basic">
  <TR>
   <TD>User Name:
