change upstream/downstream to left/right

--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -190,13 +190,13 @@ onClick="loading([], ['results']); run([
 	<TD colspan =2>
 	<font class="small">Reverse region display: <label><input class="backbox" type="radio" name="rev_region1" id="rev_region1" tabindex="1" value="1" />Yes</label><label><input class="backbox" type="radio" name="rev_region1" id="rev_region1" tabindex="1" value="0" checked />No</label></font>
       <TR>
-       <TD><DIV class="small">Upstream:<br>(left sequence)</DIV>
+       <TD><DIV class="small">Left sequence:</DIV>
        <TD><DIV  id="up1" ><input class="backbox" type="text" name="dr1up" id="dr1up" tabindex="1" size="10" value="10000" /> </DIV>
       <TR>
-       <TD><DIV class="small">Downstream:<br>(right sequence)</DIV>
+       <TD><DIV class="small">Right sequence:</DIV>
        <TD><DIV  id="down1"><input class="backbox" type="text" name="dr1down" id="dr1down" tabindex="1" size="10"  value="10000" /></DIV>
       <TR>
-        <TD><input type="checkbox" name="apply_all" id="apply_all" value="0" /><font class ="small" float>(Apply distance to all?)</font>
+        <TD colspan =2><input type="checkbox" name="apply_all" id="apply_all" value="0" /><font class ="small" float>(Apply distance to all?)</font>
       </TABLE>
       <TD>
       <TABLE>
@@ -209,10 +209,10 @@ onClick="loading([], ['results']); run([
 	<TD colspan =2>
 	<font class="small">Reverse region display: <label><input class="backbox" type="radio" name="rev_region2" id="rev_region2" tabindex="1" value="1" />Yes</label><label><input class="backbox" type="radio" name="rev_region2" id="rev_region2" tabindex="1" value="0" checked />No</label></font>
        <TR>
-       <TD><DIV class="small">Upstream:</DIV>
+       <TD><DIV class="small">Left sequence:</DIV>
        <TD><DIV  id="up2" ><input class="backbox" type="text" name="dr2up" id="dr2up" tabindex="1" size="10" value="10000" /></DIV>
       <TR>
-       <TD><DIV class="small">Downstream:</DIV>
+       <TD><DIV class="small">Right sequence:</DIV>
        <TD><DIV  id="down2" ><input class="backbox" type="text" name="dr2down" id="dr2down" tabindex="1" size="10"  value="10000" /></DIV>
       </TABLE>
       <TD>
@@ -226,10 +226,10 @@ onClick="loading([], ['results']); run([
 	<TD colspan =2>
 	<font class="small">Reverse region display: <label><input class="backbox" type="radio" name="rev_region3" id="rev_region3" tabindex="1" value="1" />Yes</label><label><input class="backbox" type="radio" name="rev_region3" id="rev_region3" tabindex="1" value="0" checked />No</label></font>
        <TR>
-       <TD><DIV class="small">Upstream:</DIV>
+       <TD><DIV class="small">Left sequence:</DIV>
        <TD><DIV  id="up3" ><input class="backbox" type="text" name="dr3up" id="dr3up" tabindex="1" size="10" value="10000" /></DIV>
       <TR>
-       <TD><DIV class="small">Downstream:</DIV>
+       <TD><DIV class="small">Right sequence:</DIV>
        <TD><DIV  id="down3" ><input class="backbox" type="text" name="dr3down" id="dr3down" tabindex="1" size="10"  value="10000" /></DIV>
       </TABLE>
      </table>
@@ -265,10 +265,10 @@ onClick="loading([], ['results']); run([
 	<TD><DIV class="small">Start Position:</DIV>
       	<TD><input class="backbox" type="text" name="gb1start" id="gb1start" tabindex="1" size="10" value="1" /></TD>
       <TR>
-       <TD><DIV class="small">Upstream:</DIV>
+       <TD><DIV class="small">Left:</DIV>
        <TD><input class="backbox" type="text" name="gb1up" id="gb1up" tabindex="1" size="10" value="0" />
       <TR>
-       <TD><DIV class="small">Downstream:</DIV>
+       <TD><DIV class="small">Right:</DIV>
        <TD><input class="backbox" type="text" name="gb1down" id="gb1down" tabindex="1" size="10"  value=""/>
       </TABLE>
       <TD>
@@ -280,10 +280,10 @@ onClick="loading([], ['results']); run([
 	<TD><DIV class="small">Start Position:</DIV>
       	<TD><input class="backbox" type="text" name="gb2start" id="gb2start" tabindex="1" size="10" value="1" /></TD>
       <TR>
-       <TD><DIV class="small">Upstream:</DIV>
+       <TD><DIV class="small">Left:</DIV>
        <TD><input class="backbox" type="text" name="gb2up" id="gb2up" tabindex="1" size="10" value="0" />
       <TR>
-       <TD><DIV class="small">Downstream:</DIV>
+       <TD><DIV class="small">Right:</DIV>
        <TD><input class="backbox" type="text" name="gb2down" id="gb2down" tabindex="1" size="10"  value=""/>
       </TABLE>
       <TD>
@@ -295,10 +295,10 @@ onClick="loading([], ['results']); run([
 	<TD><DIV class="small">Start Position:</DIV>
       	<TD><input class="backbox" type="text" name="gb3start" id="gb3start" tabindex="1" size="10" value="1" /></TD>
       <TR>
-       <TD><DIV class="small">Upstream:</DIV>
+       <TD><DIV class="small">Left:</DIV>
        <TD><input class="backbox" type="text" name="gb3up" id="gb3up" tabindex="1" size="10" value="0" />
       <TR>
-       <TD><DIV class="small">Downstream:</DIV>
+       <TD><DIV class="small">Right:</DIV>
        <TD><input class="backbox" type="text" name="gb3down" id="gb3down" tabindex="1" size="10"  value=""/>
       </TABLE>
      </table>
